# VoidDream

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SESSION_HANDOFF.md  THEMING.md
Old cofreeze messages/: LAST MESSAGE.md
assets/: io.github.FemBoyGamerTechGuy.VoidDream.metainfo.xml
assets/desktop/: io.github.FemBoyGamerTechGuy.VoidDream.desktop
icons/: emoji.json  minimal.json  nerdfont.json  none.json
packaging/: PKGBUILD  README.md  build-deb.sh  build-packages.sh  build-rpm.sh  voiddream-0.1.5.r24.g20b4cfd-1-x86_64.pkg.tar.zst
packaging/pkg/voiddream/: .BUILDINFO  .MTREE  .PKGINFO
packaging/pkg/voiddream/usr/share/VoidDream/icons/: nerdfont.json
packaging/pkg/voiddream/usr/share/VoidDream/themes/: ayu-dark.json  dracula.json  gruvbox-light.json  material-ocean.json  onedark.json  rose-pine-dawn.json  rose-pine-moon.json  tokyo-night.json
packaging/pkg/voiddream/usr/share/licenses/voiddream/: LICENSE
packaging/voiddream/: config  packed-refs
packaging/voiddream/objects/pack/: pack-dde39b2bfd2c8dd5fcf4677245ce78770bc612f2.idx  pack-dde39b2bfd2c8dd5fcf4677245ce78770bc612f2.pack  pack-dde39b2bfd2c8dd5fcf4677245ce78770bc612f2.rev
scripts/: PKGBUILD  README.md  install-deps-arch.sh  install-deps-debian.sh  install-deps-fedora.sh
src/: app.rs  config.rs  drives.rs  extract.rs  keys.rs  lang.rs  main.rs  trash.rs  types.rs  ui.rs
themes/: ayu-dark.json  btop-dark.json  btop-default.json  catppuccin-frappe.json  catppuccin-latte.json  catppuccin-macchiato.json  catppuccin-mocha.json  dracula.json  everforest-dark.json  gruvbox-dark.json  gruvbox-light.json  kanagawa.json  material-ocean.json  nord.json  onedark.json  rose-pine-dawn.json  rose-pine-moon.json  rose-pine.json  solarized-dark.json  solarized-light.json  tokyo-night-light.json  tokyo-night-storm.json  tokyo-night.json
